--- a/.env.staging
+++ b/.env.staging
@@ -4,5 +4,5 @@ NODE_ENV = production
 ENV = 'staging'
 
 # base api
-VUE_APP_BASE_API = 'https://www.901fan.com/officialcars'
+VUE_APP_BASE_API = 'https://www.901fan.com'
 
